scrollbar fix

--- a/css/base.css
+++ b/css/base.css
@@ -13,10 +13,14 @@ body {
   overflow-x: hidden;
   min-height: 100vh;
   transition: 0.3s ease-out;
+  overflow: hidden;
+  scrollbar-width: none;
   -ms-scroll-chaining: none;
       overscroll-behavior: none;
 }
-
+body::-webkit-scrollbar {
+  height: 0;
+}
 h1 {
   font-family: "Playfair Display", sans-serif;
 }
